fixed alignment of skills in skill cards

--- a/src/pages/Skills/Skills.module.css
+++ b/src/pages/Skills/Skills.module.css
@@ -60,7 +60,7 @@
         /* justify-content: center; */
         flex-direction: column;
 
-        height: 70rem
+        height: 110rem
     }
 
     /* .cards {
